# ai-code-waste-detector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: diagnostic.yml
ai_code_waste_detector/: __init__.py  cli.py  duplication.py  engine.py  git_provenance.py  history.py  models.py  provenance.py  report.py  runtime.py  scanner.py
examples/: runtime.example.json
examples/synthetic_pilot/: runtime.json  service.py
tests/: test_engine.py  test_history.py  test_js_support.py  test_report_json.py
tests/fixtures/: runtime.json  sample_service.py
tests/fixtures_js/: runtime.json  sample_logic.js
