[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-waste-detector"
version = "0.1.0"
description = "Read-only diagnostic analyzer for AI code waste signals."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
waste-detector = "ai_code_waste_detector.cli:main"
